Sabores Mariano Guardia Changelog

Sabores Mariano Guardia V 0.61)

-Se despixelo el logo y se le paso a formato png
-Se bajo la altura de grids para resolucion en index entre 799px y 1050px para que las imagenes se amolden de forma correcta
-Se aumento el tamaño de texto en contacto, se bajo el ancho a 80% y se añadio media querry para llevarlo a 100 ante 850px

Sabores Mariano Guardia V 0.6)

-Se añadió enviar.php para enviar mails al formulario.
-Se creo una pagina HTML nueva a la que se redirecciona una vez enviado el formulario de contacto.

Sabores Mariano Guardia V 0.5)

---------GENERAL--------

-Se creó la documentación de cambios changelog.txt
-Se agregaron las keywords para motores de busquedas según cada sección
-Se agregó una descripción según cada sección para que figuré en los motores de búsqueda
-Se cambió el título de cada página

---------VARIABLES---------

-Se creó la variable $colorHover para cambiar siempre que haya un hover
-Se agrego @mixin para ser una variable de colores degradados y un hover para enfatizar la posición del mouse
-Se agrego como @extend en variables la clase .flexMid, la cual es repetida, cuenta con:
	display: flex;
    	align-items: center;
    	justify-content: space-evenly;

---------IMAGENES--------

-se borro una imagen innecesaria; no hubo necesidad de cambios en las imagenes dado a su bajo tamaño

---------NAV---------

-Se cambió la fuente del NAV a color negro para mejorar la visibilidad

---------INDEX---------

-El hover de los iconos ya solo aparecera a partir de tamaños de pantalla mayores a 799px
-Se quitó el color de fondo del carrousel

---------SABORES e INGREDIENTES--------

-Agregados los siguientes sabores:

	SABORES FRUTALES (34)
	SABORES PARA BEBIDAS (15)
	SABORES SALADOS (36)
	OTROS SABORES (30)
	EMULSIONES (7)

-Agregados los siguientes ingredientes:

	ANTI AGLOMERANTES (1)
	COLORANTES (1)
	EMULSIONANTES (3)
	TEXTURIZANTES Y SOLUCIONES EN TEXTURA (9)
	POTENCIADORES DE SABOR (3)