@@ -42,10 +42,11 @@
     color: black; } }
 
 .imgMain_index {
-  width: 100%;
-  height: 100%;
+  width: 600px;
+  height: 400px;
   padding: 3px;
-  background-color: #860920; }
+  margin-top: 70px;
+  transform: rotate(5deg); }
 
 .imgSection_index {
   width: 80%;
@@ -74,8 +75,8 @@
   height: 1000px;
   display: grid;
   grid-template-columns: 1ft 1ft;
-  grid-template-rows: 100px 400px 400px;
-  grid-template-areas: "titulo titulo" "texto1 imagen1" "imagen2 texto2";
+  grid-template-rows: 100px 400px 20px 400px;
+  grid-template-areas: "titulo titulo" "texto1 imagen1" "sabores sabores" "imagen2 texto2";
   row-gap: 5px;
   column-gap: 5px;
   align-items: center;
@@ -87,6 +88,16 @@
 
 #grillatitulo_main {
   grid-area: titulo; }
+
+.imgCentral_index {
+  z-index: 1;
+  margin-left: -300px;
+  height: 250px;
+  width: 450px;
+  transform: rotate(40deg);
+  grid-area: sabores;
+  animation-name: rotar;
+  animation-duration: 10s; }
 
 .section_index {
   margin-top: 20px; }
@@ -111,8 +122,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: white;
-  border: solid #860920 2px;
   grid-area: texto1; }
 
 #grilla4_main {
@@ -120,11 +129,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #860920;
   grid-area: texto2; }
-
-.parrafo_index {
-  padding: 3%; }
 
 .h2_index, h3 {
   font-family: 'Bellota';
@@ -605,24 +610,12 @@ footer {
   .footerParrafo {
     font-size: 15px; } }
 
-#grillatitulo_main {
-  grid-area: titulo; }
-
 h1 {
   font-family: 'Bellota', cursive;
   color: #860920;
   font-weight: bold;
   margin: 20px;
   text-align: center; }
-
-#grilla1_main {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  border: solid #860920 2px;
-  grid-area: texto1; }
 
 .parrafo_index {
   padding: 3%; }
@@ -635,14 +628,6 @@ p {
   text-align: center;
   line-height: 40px;
   margin: 0; }
-
-#grilla4_main {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: #860920;
-  grid-area: texto2; }
 
 .redParrafo {
   color: white;
@@ -684,7 +669,7 @@ h4 {
   box-sizing: border-box; }
 
 .body_index {
-  background-image: linear-gradient(to bottom, white, white, #860920, white, white); }
+  background-image: linear-gradient(to bottom, white, white, #860920, white, white, white); }
 
 /*Para que el footer siempre esté abajo*/
 html {
