@@ -50,7 +50,7 @@
 
     <!-- Texto explicativo y sobre nosotros -->
     <main class="main_index">
-         <!-- DEBERIA DARLE UN DIV A CADA ELEMENTO? ESO ENSUCIARIA EL CODIGO UN POCO.... -->
+         
         <div id="grillatitulo_main">
             <h1 class="titulo1">SOBRE NOSOTROS</h1>
         </div>
@@ -58,9 +58,11 @@
         <div id="grilla1_main">
             <p class="parrafo_index">Somos un grupo dedicado a la excelencia y a “ESO” que tanto estás necesitando para tus productos dentro de la industria alimenticia. Contamos con más de 30 años en la industria de sabores e ingredientes, brindado calidad, atención y el mejor asesoramiento para tu empresa. </p>
         </div>
-        <img src="img/frutas-1-768x512.jpg" alt="" class="imgMain_index">
+        <img src="./img/frutas-1-768x512.jpg" alt="" class="imgMain_index">
 
-        <img src="img/vegetales-1-768x512.jpg" alt="" class="imgMain_index">
+        <img src="./img/centroSabores.png" alt="" class="imgCentral_index">
+
+        <img src="./img/vegetales-1-768x512.jpg" alt="" class="imgMain_index">
         
         <div id="grilla4_main">
             <p class="redParrafo">Buscamos soluciones innovadoras según tus necesidades y las adaptamos, para que la calidad de tu producto sea sobresaliente en un mercado altamente demandante y competitivo</p>    
