@@ -1,11 +1,17 @@
 .imgMain_index{
-    width: 100%;
-    height: 100%;
+    width: 600px;
+    height: 400px;
     padding: 3px;
-    background-color:  $colorSabores ;
+    margin-top: 70px;
+    transform: rotate(5deg);
+    
+    
 }
 
 
+    
+        
+    
 
 
 .imgSection_index{
