@@ -1,7 +1,5 @@
 
-#grillatitulo_main{
-    grid-area: titulo;
-}
+
 
 h1{
     font-family: 'Bellota', cursive;
@@ -11,15 +9,6 @@ h1{
     text-align: center;
 }
 
-#grilla1_main{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border: solid $colorSabores 2px;
-    grid-area: texto1;
-}
 
 
 
@@ -38,15 +27,6 @@ p{
     margin: 0;
 }
 
-#grilla4_main{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color:  $colorSabores ;
-    grid-area: texto2;
-    
-}
 
 .redParrafo{
     
