@@ -19,7 +19,7 @@
 }
 
 .body_index{
-    background-image: linear-gradient(to bottom, white, white ,$colorSabores,white, white );
+    background-image: linear-gradient(to bottom, white, white ,$colorSabores,white,white, white );
 }
 
 /*Para que el footer siempre esté abajo*/
