@@ -1,5 +1,10 @@
 Sabores Mariano Guardia Changelog
 
+Sabores Mariano Guardia V 0.7)
+-Se rediseño la página de contacto
+-Se borro codigos repetidos en index y parrafos y titulos
+
+
 Sabores Mariano Guardia V 0.61)
 
 -Se despixelo el logo y se le paso a formato png
